# calculate

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  c_programming_mastery_guide.md
.claude/: settings.local.json
include/cpp/mylib/: CSVParser.hpp  Calculator.hpp  DynamicArray.hpp  TCPServer.hpp
include/mylib/: calculator.h  csv_parser.h  dynamic_array.h  tcp_server.h
src/: calculator.c  csv_parser.c  dynamic_array.c  main.c  server_main.c  tcp_server.c
src/cpp/: CSVParser.cpp  Calculator.cpp  DynamicArray.cpp  TCPServer.cpp  main.cpp  server_main.cpp
tests/: CMakeLists.txt  test_calculator.c  test_csv_parser.c  test_data.csv  test_dynamic_array.c  test_tcp_client.c
tests/cpp/: test_calculator.cpp  test_csv_parser.cpp  test_dynamic_array.cpp  test_tcp_client.cpp
